services/loyalty-app/loyalty-app.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: loyalty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loyalty
  template:
    metadata:
      labels:
        app: loyalty
    spec:
      containers:
      - name: loans
        image: gcr.io/bap-amer-select-demo2/loyalty:1.0.0
        resources:
          limits:
            memory: "500Mi"
            cpu: "100m"
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
