services/loyalty-app/loyalty-service-external.yaml
kind: Service
apiVersion: v1
metadata:
  name: loyalty-external
spec:
  type: LoadBalancer
  ports:
   - port: 80
     targetPort: 8080
     protocol: TCP
  selector:
    app: loyalty
