services/loyalty-app/loyalty-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: loyalty
spec:
  ports:
   - port: 80
     targetPort: 8080
     protocol: TCP
  selector:
    app: loyalty
