services/loyalty-app/loyalty.yaml
# Copyright 2020 Google LLC
# 
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
# 
#       http://www.apache.org/licenses/LICENSE-2.0
# 
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

# An loyalty target example Deployment and Service.
apiVersion: v1
kind: Service
metadata:
  name: loyalty
  namespace: default
  labels:
    app: loyalty
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: loyalty
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loyalty
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loyalty
      version: v1
  template:
    metadata:
      labels:
        app: loyalty
        version: v1
        managed-by: apigee
    spec:
      containers:
      - image: gcr.io/bap-amer-select-demo2/loyalty:1.0.0
        imagePullPolicy: IfNotPresent
        name: loyalty
        ports:
        - containerPort: 8080
