services/loyalty-app/loyalty-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: loyalty-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: loyalty-credential
    hosts:
    - "api.loyalty.dynolab.app"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: layalty
spec:
  hosts:
  - "api.loyalty.dynolab.app"
  gateways:
  - loyalty-gateway
  http:
  - match:
    - uri:
        exact: /members
    route:
    - destination:
        host: loyalty
        port:
          number: 80
